--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.16.0",
     "@react-three/postprocessing": "^2.16.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
+    "axios": "^1.6.8",
     "framer-motion": "^11.0.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.1",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "three": "^0.162.0"
   },
   "devDependencies": {
