--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.16.0",
     "@react-three/postprocessing": "^2.16.2",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.8",
