--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.26.4",
     "three": "^0.162.0"
   },
   "devDependencies": {
