--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.16.0",
     "@react-three/postprocessing": "^2.16.2",
